objects/Production_Build__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Production Builds</relationshipLabel>
        <relationshipName>Production_Builds</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charging_Unit__c</fullName>
        <label>Charging Unit</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Final_Unit_Complete__c</fullName>
        <label>Date Final Unit Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_First_Unit_Complete__c</fullName>
        <label>Date First Unit Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PO_Received_by_Manufacturer__c</fullName>
        <label>Date PO Received by Manufacturer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dual_Digital__c</fullName>
        <label>Dual Digital #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dual_Port__c</fullName>
        <label>Dual Port #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ECU__c</fullName>
        <description>Environmental Control Unit</description>
        <inlineHelpText>Environmental Control Unit</inlineHelpText>
        <label>ECU</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Ship_Date__c</fullName>
        <label>Expected Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hybrid__c</fullName>
        <label>Hybrid #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Media_Player__c</fullName>
        <label>Media Player</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modem__c</fullName>
        <label>Modem</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO1__c</fullName>
        <label>PO1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO2__c</fullName>
        <label>PO2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO3__c</fullName>
        <label>PO3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Build_Nickname__c</fullName>
        <label>Production Build Nickname</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Discussion</fullName>
                </value>
                <value>
                    <fullName>Finalizing Internally</fullName>
                </value>
                <value>
                    <fullName>Order Submitted</fullName>
                </value>
                <value>
                    <fullName>In Transit</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Notes__c</fullName>
        <label>Text Notes</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Stations__c</fullName>
        <formula>Hybrid__c + Dual_Digital__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Stations #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Production Build</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Production_Build_Nickname__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Charging_Unit__c</columns>
        <columns>Date_Final_Unit_Complete__c</columns>
        <columns>Date_First_Unit_Complete__c</columns>
        <columns>Date_PO_Received_by_Manufacturer__c</columns>
        <columns>Dual_Digital__c</columns>
        <columns>Dual_Port__c</columns>
        <columns>ECU__c</columns>
        <columns>Expected_Ship_Date__c</columns>
        <columns>Hybrid__c</columns>
        <columns>Media_Player__c</columns>
        <columns>Modem__c</columns>
        <columns>Total_Stations__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Production_Build_View</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Production_Build_Nickname__c</columns>
        <columns>Date_PO_Received_by_Manufacturer__c</columns>
        <columns>Status__c</columns>
        <columns>Expected_Ship_Date__c</columns>
        <columns>Dual_Digital__c</columns>
        <columns>Hybrid__c</columns>
        <columns>Media_Player__c</columns>
        <columns>Modem__c</columns>
        <columns>Charging_Unit__c</columns>
        <columns>Text_Notes__c</columns>
        <columns>Date_Final_Unit_Complete__c</columns>
        <columns>Date_First_Unit_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <label>Production Build View</label>
    </listViews>
    <listViews>
        <fullName>Production_build_status</fullName>
        <columns>NAME</columns>
        <columns>Production_Build_Nickname__c</columns>
        <columns>Status__c</columns>
        <columns>Date_PO_Received_by_Manufacturer__c</columns>
        <columns>Expected_Ship_Date__c</columns>
        <columns>Total_Stations__c</columns>
        <columns>Text_Notes__c</columns>
        <columns>PO1__c</columns>
        <filterScope>Everything</filterScope>
        <label>Production build status</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Production Build Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Builds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>